--- a/Prayers/StJoseph/Prayers.StJoseph.iOS/Prayers.StJoseph.iOS.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.iOS/Prayers.StJoseph.iOS.csproj
@@ -97,9 +97,6 @@
     <ImageAsset Include="Assets.xcassets\start_logo.imageset\Contents.json">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\start_logo.imageset\mainpic.jpg">
-      <Visible>false</Visible>
-    </ImageAsset>
     <InterfaceDefinition Include="Resources\SplashScreen.storyboard" />
     <BundleResource Include="..\..\..\Resources\St Joseph Prayer.csv">
       <Link>St Joseph Prayer.csv</Link>
@@ -179,6 +176,7 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\152.png">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\start_logo.imageset\splash_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
