--- a/Prayers/StJoseph/Prayers.StJoseph.UWP/Prayers.StJoseph.UWP.csproj
+++ b/Prayers/StJoseph/Prayers.StJoseph.UWP/Prayers.StJoseph.UWP.csproj
@@ -19,10 +19,11 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-    <PackageCertificateThumbprint>FEF355CDE3BE930B33585F617E619D88DB3D0901</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>4EFD643995AAEE13F3F4572961C4C69F3480E01E</PackageCertificateThumbprint>
     <PackageCertificateKeyFile />
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
-    <AppxPackageSigningTimestampServerUrl>https://timestamp.comodoca.com</AppxPackageSigningTimestampServerUrl>
+    <AppxPackageSigningTimestampServerUrl>
+    </AppxPackageSigningTimestampServerUrl>
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
